--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -70,6 +70,10 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.victools</groupId>
+            <artifactId>jsonschema-generator</artifactId>
+        </dependency>
 
         <!-- Provided Dependencies -->
         <dependency>
