--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <version.org.jboss.shrinkwrap>1.2.6</version.org.jboss.shrinkwrap>
         <version.org.skyscreamer>1.5.0</version.org.skyscreamer>
         <version.org.jboss.resteasy.core-spi>4.6.0.Final</version.org.jboss.resteasy.core-spi>
-        
+        <version.jsonschema-generator>4.18.0</version.jsonschema-generator>
+
         <!-- Apicurio Data Models -->
         <version.apicurio-data-models>1.1.9</version.apicurio-data-models>
 
@@ -156,6 +157,12 @@
                 <artifactId>commons-logging</artifactId>
                 <version>${version.commons-logging}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.victools</groupId>
+                <artifactId>jsonschema-generator</artifactId>
+                <version>${version.jsonschema-generator}</version>
             </dependency>
 
             <!-- Dependencies provided by the project -->
